<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="authViewModel"
            type="com.bahaddindemir.bitcointicker.ui.auth.AuthViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_background"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/email"
            android:textAllCaps="true"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@color/input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:text="@={authViewModel.request.email}"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/password"
            android:textAllCaps="true"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@color/input"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:text="@={authViewModel.request.password}"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/btn_login"
            android:gravity="center"
            android:onClick="@{() -> authViewModel.onSignupClicked()}"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/splash"
            android:textSize="16sp" />
    </LinearLayout>

</layout>