<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.bahaddindemir.bitcointicker.ui.detail.DetailViewModel" />
    </data>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/splash_accent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/view_toolbar" />

        <LinearLayout
            android:id="@+id/refreshContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh_interval"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/refreshInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/button_background"
                android:text="@string/confirm_btn"
                android:textColor="@color/white" />

            <View
                android:id="@+id/refreshIntervalLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/splash_accent"
                android:visibility="visible" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/refreshContainer"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/detailContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                android:visibility="visible"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/hashAlgorithmTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/hash_algorithm"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/hashAlgorithm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:text="SHA-256" />

                <View
                    android:id="@+id/descriptionLine"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/splash_accent"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/descriptionTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/description"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:maxLength="500"
                    android:textColor="@color/white"
                    tools:text="Description" />

                <View
                    android:id="@+id/currentPriceLine"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/splash_accent"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/currentPriceTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/current_price"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/currentPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/white"
                    tools:text="Current Price" />

                <View
                    android:id="@+id/priceChangePercentage24hLine"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/splash_accent"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/price_change_percentage_24hTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/price_change_percentage_24h"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/priceChangePercentage24h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/white"
                    tools:text="24H percentage change" />

                <View
                    android:id="@+id/lastUpdatedLine"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/splash_accent"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/refreshDateTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/detail_up_to_date"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/refreshDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>
</layout>